# Voxel-Techniques

./: .gitignore  README.md
.github/workflows/: build_on_release.yml  cmake_windows_build.yml  cmake_windows_unit_tests.yml
Voxino/: .gitignore  CMakeLists.txt  copy_file_if_not_exist.cmake  imgui.ini
Voxino/benchmarks/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
Voxino/benchmarks/benchmarks/: CMakeLists.txt
Voxino/benchmarks/benchmarks/src/: ChunkBenchmark.cpp  SampleBenchmark.cpp  defines.h
Voxino/resources/: blocks.yaml  textures.yaml
Voxino/resources/Shaders/Graphics/: InfiniteGridFloor.fs
Voxino/resources/Shaders/Polygons/: Chunk.fs  Chunk.vs  ChunkAtlas.fs  ChunkAtlas.vs  ChunkCullingGpu.fs  ChunkCullingGpu.gs  ChunkCullingGpu.vs  ChunkGreedyMeshing.vs
Voxino/resources/Shaders/Raycast/: ChunkTexturedVoxels.fs  ChunkTexturedVoxelsBrickmapGpu.fs
Voxino/resources/Shaders/Raycast/Benchmark/: ChunkTexturedVoxels.fs  ChunkTexturedVoxelsBrickmapGpu.fs  ChunkTexturedVoxelsFixedStep.fs  ChunkTexturedVoxelsOctreeGpu.fs
Voxino/resources/Shaders/Raycast/Debug/: ChunkTexturedVoxels.fs  ChunkTexturedVoxelsBrickmapGpu.fs  ChunkTexturedVoxelsBrickmapGpu.vs  ChunkTexturedVoxelsFixedStep.fs  ChunkTexturedVoxelsOctreeGpu.fs
Voxino/resources/Shaders/Raycasting/: ChunkColoredVoxels.fs
Voxino/src/: Application.cpp  Application.h  CMakeLists.txt  CMakeLists_Sources.txt  constants.h  main.cpp  pch.h
Voxino/src/Player/: Player.cpp  Player.h
Voxino/src/Renderer/: Renderer.cpp  Renderer.h
Voxino/src/Renderer/Core/: OpenglUtils.cpp  OpenglUtils.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Voxino/src/Renderer/Core/Buffers/: AtomicCounter.cpp  AtomicCounter.h  Buffer.cpp  Buffer.h  BufferElement.cpp  BufferElement.h  BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Voxino/src/Renderer/Graphics/: Font.h  Texture.cpp  Texture.h
Voxino/src/Renderer/Graphics/2D/: Rectangle2D.cpp  Rectangle2D.h  Sprite2D.cpp  Sprite2D.h
Voxino/src/Renderer/Graphics/3D/: Sprite3D.cpp  Sprite3D.h
Voxino/src/Renderer/Graphics/3D/Core/: Mesh.cpp  Mesh.h  Vertex.h
Voxino/src/Renderer/Graphics/3D/Utils/: Rotation3D.cpp  Rotation3D.h
Voxino/src/Resources/: ResourceManager.h  Resources.h  TexturePack.cpp  TexturePack.h  TexturePackArray.cpp  TexturePackArray.h  TexturePackAtlas.cpp  TexturePackAtlas.h
Voxino/src/States/: State.cpp  State.h  StateStack.cpp  StateStack.h  States.h
Voxino/src/States/CustomStates/: ExitApplicationState.cpp  ExitApplicationState.h  GameState.cpp  GameState.h  LogoState.cpp  LogoState.h  PolygonSingleChunkState.cpp  PolygonSingleChunkState.h  RaycastSingleChunkColoredVoxels.cpp  RaycastSingleChunkColoredVoxels.h  RaycastSingleChunkTexturedVoxels.cpp  RaycastSingleChunkTexturedVoxels.h
Voxino/src/States/CustomStates/Polygons/: PolygonMultiChunkState.cpp  PolygonMultiChunkState.h  PolygonSingleChunkState.cpp  PolygonSingleChunkState.h
Voxino/src/States/CustomStates/Raycast/: RaycastSingleChunkTexturedBrickmapGpu.cpp  RaycastSingleChunkTexturedBrickmapGpu.h  RaycastSingleChunkTexturedVoxels.cpp  RaycastSingleChunkTexturedVoxels.h
Voxino/src/States/CustomStates/Raycast/Multi/: RaycastMultiChunk.cpp  RaycastMultiChunk.h  RaycastMultiChunkTexturedVoxels.cpp  RaycastMultiChunkTexturedVoxels.h
Voxino/src/States/CustomStates/Raycast/Single/: RaycastSingleChunkBase.cpp  RaycastSingleChunkBase.h  RaycastSingleChunkTexturedBrickmapGpu.cpp  RaycastSingleChunkTexturedBrickmapGpu.h  RaycastSingleChunkTexturedOctreeGpu.cpp  RaycastSingleChunkTexturedOctreeGpu.h  (+4 more)
Voxino/src/Utils/: Bitset3D.cpp  Bitset3D.h  CatmullRomSpline.h  CoordinateBase.cpp  CoordinateBase.h  CoordinatesGenerator.h  Direction.h  FpsCounter.h  ImGuiLog.cpp  ImGuiLog.h  Lerp.h  Mouse.cpp  Mouse.h  Normalize.h  RGBA.cpp  RGBA.h  RayCounters.h  minitrace_macros.h  profiler_macros.h  profiler_memory_tracking.cpp  profiler_memory_tracking.h
Voxino/src/World/: AutomaticCamera.cpp  AutomaticCamera.h  Camera.cpp  Camera.h  InfiniteGridFloor.cpp  InfiniteGridFloor.h  Skybox.cpp  Skybox.h
Voxino/src/World/Block/: Block.cpp  Block.h  BlockId.h  BlockMap.cpp  BlockType.h
Voxino/src/World/Chunks/: Chunk.cpp  Chunk.h  ChunkBlocks.cpp  ChunkBlocks.h  ChunkContainer.cpp  ChunkContainer.h  ChunkContainerBase.cpp  ChunkContainerBase.h  ChunkContainerPolygons.cpp  ChunkContainerPolygons.h  ChunkContainerRaycast.cpp  ChunkContainerRaycast.h  CoordinatesAroundOriginGetter.h  SimpleTerrainGenerator.cpp  SimpleTerrainGenerator.h
Voxino/src/World/Polygons/Block/: Block.cpp  BlockId.h  BlockMap.h  TextureId.h
Voxino/src/World/Polygons/Chunks/: Chunk.cpp  Chunk.h  ChunkBlocks.cpp  ChunkBlocks.h  ChunkContainer.cpp  ChunkContainer.h  ChunkInterface.cpp  ChunkInterface.h  CoordinatesAroundOriginGetter.cpp  CoordinatesAroundOriginGetter.h  SimpleTerrainGenerator.cpp  SimpleTerrainGenerator.h
Voxino/src/World/Polygons/Meshes/: ChunkArrayCullingGpuMesh.cpp  ChunkArrayCullingGpuMesh.h  ChunkArrayMesh.cpp  ChunkArrayMesh.h  ChunkAtlasMesh.cpp  ChunkAtlasMesh.h  Mesh3D.h  MeshRegion.h  Model3D.cpp  Model3D.h  Model3DIndexed.cpp  Model3DIndexed.h  Model3DNoIndexes.cpp  Model3DNoIndexes.h  WorldBlockMesh.cpp  WorldBlockMesh.h
Voxino/src/World/Raycast/Chunks/: Brickgrid.cpp  Brickgrid.h  BrickgridGpu.cpp  BrickgridGpu.h  Brickmap.cpp  Brickmap.h  OctreeGpu.cpp  OctreeGpu.h  VoxelsGpu.cpp  VoxelsGpu.h
Voxino/src/World/Raycasting/Chunks/: VoxelsGpu.cpp  VoxelsGpu.h
Voxino/tests/: CMakeLists.txt
Voxino/tests/mocks/src/States/: MockState.h  MockStateStack.h
Voxino/tests/ut/src/States/: StateStackTest.cpp
(+36 files in other folders)
